<resources>
    <string name="app_name">Reto Android</string>

    <string name="Accept">Accept</string>
    <string name="Decline">Cancel</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="titulo">DIRECTORY</string>
    <string name="crud">CRUD</string>

    <string name="common_message_noInternet">You are not connect to internet, please check your connection</string>
</resources>