<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_portrait_24"
            android:layout_centerVertical="true"/>


        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:focusable="true"/>


        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_restore_from_trash_24"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edit"
            android:focusable="true"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:orientation="vertical"
            android:layout_marginTop="5dp">


            <TextView
                android:id="@+id/card_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/card_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/card_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textSize="12sp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>